# cardano-android-wallet

app/: CMakeLists.txt  build.gradle
app/cardano-c/aarch64-linux-android/debug/: libcardano_c.d
app/cardano-c/aarch64-linux-android/release/: libcardano_c.d
app/cardano-c/armv7-linux-androideabi/debug/: libcardano_c.d
app/cardano-c/armv7-linux-androideabi/release/: libcardano_c.d
app/cardano-c/i686-linux-android/debug/: libcardano_c.d
app/cardano-c/i686-linux-android/release/: libcardano_c.d
app/cardano-c/x86_64-linux-android/debug/: libcardano_c.d
app/cardano-c/x86_64-linux-android/release/: libcardano_c.d
app/src/androidTest/java/uk/co/primetype/adawallet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/uk/co/primetype/adawallet/: Account.java  CreateWalletActivity.java  MainActivity.java  Wallet.java  WalletSummaryView.java  Wallets.java
app/src/main/res/layout/: activity_create_wallet.xml  activity_main.xml  sample_wallet_symmary_view.xml
app/src/main/res/menu/: menu_main2.xml
app/src/main/res/values/: attrs_wallet_symmary_view.xml  strings.xml
app/src/test/java/uk/co/primetype/adawallet/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
